[REFACTOR] Change if statement code in Payment Repository